--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <link href="favicon.ico" rel="icon" type="text/css">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Sacramento&display=swap"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@100&family=Sacramento&display=swap"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Abdallah</title>
 </head>
@@ -16,34 +18,42 @@
     <img alt="cloud-img" class="cloud2" src="cloud.png">
     <img alt="cloud-img" class="cloud" src="cloud.png">
     <h1>Abdallah</h1>
-    <p class="work">a Programmer</p>
+    <h2 class="work">a Programmer</h2>
     <img alt="mountain-img" class="mountain" src="mountain.png">
 
 </div>
 <div class="middle-container">
     <div class="profile">
-        <img class="Abdallah-img" alt="Abdallah-img" src="Abdallah.png" width="200">
-        <h2>Hello.</h2>
+        <img alt="Abdallah-img" class="Abdallah-img" src="Abdallah.png" width="200">
+        <h3>Hello.</h3>
         <p>I am a Programmer, I love programing, I learn Web development and Python development</p>
     </div>
     <hr>
     <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-            <p>Python Development</p>
-            <p>🟡🟡🟡🟡⚫</p>
-            <p>Web Development</p>
-            <p>🟡🟡🟡🟡⚫</p>
-            <p>Drawing</p>
-            <p>🟡🟡⚫⚫⚫</p>
-        </div>
+        <h3>My Skills.</h3>
+        <table>
+            <tr>
+                <td><img alt="computer-img" class="computer" src="computer.png" width="200"></td>
+            <td>
+                <div class="skill-row">
+                <h2 class="skill-row">Python Development</h2>
+                <p class="skill-row">🟡🟡🟡🟡⚫</p>
+                <h2 class="skill-row">Web Development</h2>
+                <p class="skill-row">🟡🟡🟡🟡⚫</p>
+                <h2 class="skill-row">Drawing</h2>
+                <p class="skill-row">🟡🟡⚫⚫⚫</p>
+            </div>
+            </td>
+            </tr>
+        </table>
     </div>
     <hr>
     <div class="contact-me">
-        <h2>Get In Touch</h2>
+    <div class="contact-me">
+        <h3>Get In Touch</h3>
         <a class="btn" href="mailto:abdallah.m.zedan@email.com">CONTACT ME</a>
     </div>
-</div>
+
 
 
 <div class="bottom-container">
@@ -51,6 +61,8 @@
     <a class="footer-link" href="https://twitter.com/AbdallahZedan29">Twitter</a>
     <a class="footer-link" href="https://github.com/BoodyZedan">GitHub</a>
     <p>© 2018 Abdallah Zedan.</p>
+</div>
+</div>
 </div>
 
 </body>
